kustomize/bases/istio/mtls.yml
apiVersion: "security.istio.io/v1beta1"
kind: PeerAuthentication
metadata:
  name: mtls
  namespace: kubetools
spec:
  mtls:
    mode: STRICT
