kustomize/bases/istio/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubetools-istio-vs
  namespace: kubetools
spec:
  hosts:
  - "*"
  gateways:
  - kubetools-istio-gateway
  http:
  - match:
    - uri:
        prefix: /
    rewrite:
        uri: /
    route:
    - destination:
        host: apigw
        port:
          number: 3001
